--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,77 @@
     <title>ROMSEM</title>
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <section class="contacts">
+        <div class="contacts__phone">
+          <div class="contacts__text">Наш телефон</div>
+          <div class="contacts__number">+996 705 188 955</div>
+          <div class="contacts__number">+996 555 188 955</div>
+          <div class="contacts__time">работаем с 10:00 до 00:00</div>
+        </div>
+        <div class="contacts__sity">
+          <div class="contacts__sity-text">Город:</div>
+          <div class="contacts__sity-bishkek">Бишкек</div>
+        </div>
+        <div class="contacts__info">
+          <div class="contacts__info-rev">Отзывы</div>
+          <div class="contacts__info-delivery">Доставка и оплата</div>
+        </div>
+        <div class="contacts__search">
+          <img src="./assets/img/header/search.png" alt="search" />
+        </div>
+      </section>
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
-    <nav class="nav"></nav>
+    <nav class="nav">
+      <div class="nav__container">
+        <img src="./assets/img/Logo.png" alt="logo" class="nav__logo" />
+        <div class="nav__line"></div>
+        <ul class="nav__list">
+          <li>
+            <img src="./assets/img/nav/pizza.png" alt="pizza" />
+            <div class="nav__list-text">Пицца</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/sets.png" alt="sets" />
+            <div class="nav__list-text">Сеты</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/wok.png" alt="wok" />
+            <div class="nav__list-text">WOK</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/rolls.png" alt="rolls" />
+            <div class="nav__list-text">Роллы</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/sushi.png" alt="sushi" />
+            <div class="nav__list-text">Суши</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/salad.png" alt="salad" />
+            <div class="nav__list-text">Салаты</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/soup.png" alt="soup" />
+            <div class="nav__list-text">Супы</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/corn.png" alt="corn" />
+            <div class="nav__list-text">Корн доги</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/drinks.png" alt="drinks" />
+            <div class="nav__list-text">Напитки</div>
+          </li>
+          <li>
+            <img src="./assets/img/nav/prom.png" alt="prom" />
+            <div class="nav__list-text">Акции</div>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <section class="cart"></section>
   </body>
 </html>
