add_component_main

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,125 @@
         </div>
       </section>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div class="container">
+        <div class="carousel">
+          <div class="carousel__images">
+            <img
+              src="./assets/img/main/promo-philadelphia.png"
+              alt="philadelphia"
+            />
+          </div>
+          <div class="carousel__dots">
+            <span class="dot-active"></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        <section class="catalog">
+          <div class="catalog__block">
+            <div class="catalog__block-text">Чикен</div>
+            <img src="./assets/img/main/chicken.jpg" alt="chicken" />
+          </div>
+          <div class="catalog__block">
+            <div class="catalog__block-text">С угрем</div>
+            <img src="./assets/img/main/river-eel.jpg" alt="river-eel" />
+          </div>
+          <div class="catalog__block">
+            <div class="catalog__block-text">Корн дог</div>
+            <img src="./assets/img/main/corn-dog.jpg" alt="corn-dog" />
+          </div>
+          <div class="catalog__block">
+            <div class="catalog__block-text">Пицца</div>
+            <img src="./assets/img/main/pizza.jpg" alt="pizza" />
+          </div>
+          <div class="catalog__block">
+            <div class="catalog__block-text">Акции</div>
+            <img src="./assets/img/main/promotion.jpg" alt="promotion" />
+          </div>
+        </section>
+        <section class="slider">
+          <div class="slider__panel">
+            <div class="slider__panel-new">Новинки</div>
+            <div class="slider__panel-popular">Популярное</div>
+          </div>
+          <div class="arrow arrow-right">
+            <div class="triangle triangle-right"></div>
+          </div>
+          <div class="arrow arrow-left">
+            <div class="triangle triangle-left"></div>
+          </div>
+          <div class="slider__wrapper">
+            <div class="slider__item">
+              <div class="slider__item-img">
+                <img src="./assets/img/main/salmon-set.png" alt="salmon-set" />
+              </div>
+              <div class="slider__item-text">Саломон сет</div>
+              <div class="slider__item-descr">1050 грамм, 30 кусочков</div>
+              <div class="slider__item-inner">
+                <div class="slider__item-price">1500 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="slider__item-img">
+                <img
+                  src="./assets/img/main/philadelphia-salmon.png"
+                  alt="philadelphia-salmon"
+                />
+              </div>
+              <div class="slider__item-text">Филадельфия и лосось сет</div>
+              <div class="slider__item-descr">1260 грамм, 36 кусочков</div>
+              <div class="slider__item-inner">
+                <div class="slider__item-price">1150 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="slider__item-img">
+                <img
+                  src="./assets/img/main/philadelphia.png"
+                  alt="philadelphia"
+                />
+              </div>
+              <div class="slider__item-text">Самая большая Филадельфия</div>
+              <div class="slider__item-descr">2050 грамм, 45 кусочков</div>
+              <div class="slider__item-inner">
+                <div class="slider__item-price">2100 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="more">
+          <h2 class="more__title">Заказать суши в Бишкеке</h2>
+          <p class="more__descr">
+            Ресторан “Суши и Лапша” предлагаем своим клиентам самые вкусные суши
+            с доставкой на дом, приготовленные по классическим и адаптированным
+            к европейской аудитории рецептам, а также собственным наработкам
+            наших поваров. Мы ценим время наших клиентов, поэтому вы можете
+            заказать суши в Харькове с доставкой на дом или в офис.
+          </p>
+          <h3 class="more__menu-info">В нашем меню более 20 видов суши:</h3>
+          <ul class="more__list">
+            <li>Классические с сырым лососем, тунцом, окунем.</li>
+            <li>Экзотические с тигровой креветкой, морским гребешком.</li>
+            <li>Пикантные с копченым лососем, угрем.</li>
+          </ul>
+          <p class="more__descr">
+            В меню также представлены гунканы: с начинкой из красной икры и
+            тобико, а также феликсы, где японский майонез сочетается с рыбой,
+            морепродуктами, угрем. Любители острых блюд могут купить суши с
+            соусом спайси. Популярные начинки — копченая курица, снежный краб,
+            креветки, гребешки, тунец, лосось и окунь.
+          </p>
+
+          <div class="more__info">Подробнее</div>
+        </section>
+      </div>
+    </main>
     <footer class="footer"></footer>
     <nav class="nav">
       <div class="nav__container">
