--- a/src/index.html
+++ b/src/index.html
@@ -196,6 +196,30 @@
         </ul>
       </div>
     </nav>
-    <section class="cart"></section>
+    <section class="cart">
+      <div class="cart__wrapper">
+        <div class="cart__items">
+          <h2 class="cart__title">Ваша корзина пуста.</h2>
+          <div class="cart__text">Добавьте же скорее что-нибудь!</div>
+        </div>
+        <button class="btn btn__cart">Бесплатная доставка от 800 СОМ</button>
+      </div>
+      <div class="cart__adress">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23394.01187386841!2d74.55795402547825!3d42.86753585871745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dc91b3c881%3A0x492ebaf57cdee27d!2z0JHQuNGI0LrQtdC6LCDQmtGL0YDQs9GL0LfRgdGC0LDQvQ!5e0!3m2!1sru!2sru!4v1686133961260!5m2!1sru!2sru"
+          width="290px"
+          height="116px"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <div class="cart__adress-title">Укажите адрес</div>
+        <div class="cart__adress-order">И узнайте время доставки</div>
+        <div class="cart__adress-marker">
+          <img src="./assets/img/cart/marker.svg" alt="marker" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
