--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,55 @@
         </section>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="company">
+          <div class="company__about">
+            <ul class="company__about-list">
+              <li>О компании</li>
+              <li>Доставка и оплата</li>
+              <li>Лента материалов</li>
+              <li>Политика возврата</li>
+            </ul>
+          </div>
+          <div class="company__socials">
+            <h2 class="company__socials-title">Введите номер</h2>
+            <div class="company__socials-phone">+996 (__) ___ __ __</div>
+            <div class="company__socials-text">
+              Выберите удобный<br />
+              мессенджер для общения
+            </div>
+            <div class="company__socials-icons">
+              <div class="company__socials-wrap">
+                <i
+                  class="fa-brands fa-square-whatsapp"
+                  style="color: #43d854; font-size: 50px"
+                ></i>
+              </div>
+              <div class="company__socials-wrap">
+                <i
+                  class="fa-brands fa-telegram"
+                  style="color: #62a8de; font-size: 50px"
+                ></i>
+              </div>
+              <div class="company__socials-wrap">
+                <i
+                  class="fa-brands fa-square-instagram"
+                  style="color: #e56969; font-size: 50px"
+                ></i>
+              </div>
+            </div>
+          </div>
+          <div class="company__contacts">
+            <div class="company__contacts-block">
+              <div class="company__contacts-phone">Тел:+996 705 188 955</div>
+              <div class="company__contacts-phone">Тел:+996 555 188 955</div>
+            </div>
+            <div class="company__contacts-address">Адрес:Бакаева 126</div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <nav class="nav">
       <div class="nav__container">
         <img src="./assets/img/Logo.png" alt="logo" class="nav__logo" />
@@ -221,5 +269,9 @@
         </div>
       </div>
     </section>
+    <script
+      src="https://kit.fontawesome.com/1a7ce0f37b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
