add_category-component

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     </header>
     <main class="main">
       <div class="container">
-        <div class="carousel">
+        <!-- <section class="carousel">
           <div class="carousel__images">
             <img
               src="./assets/img/main/promo-philadelphia.png"
@@ -45,7 +45,8 @@
             <span class="carousel__dot"></span>
             <span class="carousel__dot"></span>
           </div>
-        </div>
+        </section>
+
         <section class="catalog">
           <a class="catalog__item" href="/">
             <div class="catalog__item-text">Чикен</div>
@@ -88,6 +89,7 @@
             />
           </a>
         </section>
+
         <section class="slider">
           <div class="slider__panel">
             <div class="slider__panel-wrap">
@@ -104,56 +106,238 @@
             <div class="triangle triangle-left"></div>
           </div>
           <div class="slider__wrapper">
-            <div class="slider__item">
-              <div class="slider__item-img">
-                <img src="./assets/img/main/salmon-set.png" alt="salmon-set" />
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/salmon_set.png"
+                  alt="salmon-set"
+                />
               </div>
-              <div class="slider__item-title">
-                <div class="slider__item-text">Саломон сет</div>
-                <div class="slider__item-descr">1050 грамм, 30 кусочков</div>
+              <div class="product__title">
+                <div class="product__text">Саломон сет</div>
+                <div class="product__descr">1050 грамм, 30 кусочков</div>
               </div>
               <span class="line"></span>
-              <div class="slider__item-inner">
-                <div class="slider__item-price">1500 СОМ</div>
+              <div class="product__inner">
+                <div class="product__price">1500 СОМ</div>
                 <button class="btn">Хочу!</button>
               </div>
             </div>
-            <div class="slider__item">
-              <div class="slider__item-img">
+            <div class="product">
+              <div class="product__img">
                 <img
-                  src="./assets/img/main/philadelphia-salmon.png"
+                  src="./assets/img/products/philadelphia_salmon.png"
                   alt="philadelphia-salmon"
                 />
               </div>
-              <div class="slider__item-title">
-                <div class="slider__item-text">Филадельфия и лосось сет</div>
-                <div class="slider__item-descr">1260 грамм, 36 кусочков</div>
+              <div class="product__title">
+                <div class="product__text">Филадельфия и лосось сет</div>
+                <div class="product__descr">1260 грамм, 36 кусочков</div>
               </div>
               <span class="line"></span>
-              <div class="slider__item-inner">
-                <div class="slider__item-price">1150 СОМ</div>
+              <div class="product__inner">
+                <div class="product__price">1150 СОМ</div>
                 <button class="btn">Хочу!</button>
               </div>
             </div>
-            <div class="slider__item">
-              <div class="slider__item-img">
+            <div class="product">
+              <div class="product__img">
                 <img
-                  src="./assets/img/main/philadelphia.png"
+                  src="./assets/img/products/philadelphia.png"
                   alt="philadelphia"
                 />
               </div>
-              <div class="slider__item-title">
-                <div class="slider__item-text">Самая большая Филадельфия</div>
-                <div class="slider__item-descr">2050 грамм, 45 кусочков</div>
+              <div class="product__title">
+                <div class="product__text">Самая большая Филадельфия</div>
+                <div class="product__descr">2050 грамм, 45 кусочков</div>
               </div>
               <span class="line"></span>
-              <div class="slider__item-inner">
-                <div class="slider__item-price">2100 СОМ</div>
+              <div class="product__inner">
+                <div class="product__price">2100 СОМ</div>
                 <button class="btn">Хочу!</button>
               </div>
             </div>
           </div>
         </section>
+
+        <section class="category">
+          <div class="category__header">
+            <img
+              class="category__header-image"
+              src="assets/img/nav/sets.png"
+              alt="sets"
+            />
+            <h2 class="category__header-title">Сеты</h2>
+            <div class="category__header-popup popup">
+              <div class="popup__filter">
+                <div class="popup__filter-text">Сортировка</div>
+                <div class="popup__filter-name">По умолчанию</div>
+              </div>
+              <div class="line line_mt10"></div>
+              <ul class="popup__list">
+                <li class="popup__list-item">По умолчанию</li>
+                <li class="popup__list-item">Название</li>
+                <li class="popup__list-item">Сначала дешевле</li>
+                <li class="popup__list-item">Сначала дороже</li>
+                <li class="popup__list-item">Количество кусочков</li>
+                <li class="popup__list-item">Вес</li>
+              </ul>
+            </div>
+          </div>
+          <div class="category__wrapper">
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/salmon_set.png"
+                  alt="salmon-set"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Саломон сет</div>
+                <div class="product__descr">1050 грамм, 30 кусочков</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1500 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/set_5_philadelphia.png"
+                  alt="philadelphia-5"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Сет "5 Филадельфий"</div>
+                <div class="product__descr">1120 грамм 40 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1499 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/set_philadelphia_salmon.png"
+                  alt="philadelphia-salmon"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Филадельфия и лосось сет</div>
+                <div class="product__descr">1260 грамм 36 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1499 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/set_6_philadelphi.png"
+                  alt="philadelphia-6"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Сет "6 Филадельфий"</div>
+                <div class="product__descr">1320 грамм 46 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1559 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img src="./assets/img/products/top_set.png" alt="top-set" />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Топовый сет</div>
+                <div class="product__descr">1020 грамм 40 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1519 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/kamikaze_set.png"
+                  alt="kamikaze-set"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Камикадзе сет</div>
+                <div class="product__descr">1200 грамм 52 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1469 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/set_4_Philadelphia.png"
+                  alt="Philadelphia-4"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Сет "4 Филадельфии"</div>
+                <div class="product__descr">1100 грамм 32 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1559 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/philadelphia_love_set.png"
+                  alt="philadelphia_love_set"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Филадельфия LOVE сет</div>
+                <div class="product__descr">1000 грамм 40 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1479 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product__img">
+                <img
+                  src="./assets/img/products/yakuza_set.png"
+                  alt="yakuza_set"
+                />
+              </div>
+              <div class="product__title">
+                <div class="product__text">Якудза сет</div>
+                <div class="product__descr">1270 грамм 50 кусочек</div>
+              </div>
+              <span class="line"></span>
+              <div class="product__inner">
+                <div class="product__price">1499 СОМ</div>
+                <button class="btn">Хочу!</button>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="more">
           <h2 class="more__title">Заказать суши в Бишкеке</h2>
           <p class="more__descr">
@@ -178,6 +362,38 @@
           </p>
 
           <div class="more__info">Подробнее</div>
+        </section> -->
+
+        <section class="item-info">
+          <div class="item-info__header">
+            <a href="#" class="item-info__back">Назад</a>
+            <a href="#" class="item-info__next">Вперед</a>
+          </div>
+          <div class="item-info__wrap">
+            <div class="item-info__image">
+              <img
+                src="assets/img/products/philadelphia_salmon.png"
+                alt="philadelphia_salmon"
+              />
+            </div>
+            <div class="item-info__block">
+              <div class="item-info__title">Филадельфия и лосось сет</div>
+              <div class="item-info__gram">290 грамм</div>
+              <div class="item-info__inner">
+                <div class="item-info__price">1150 СОМ</div>
+                <button>-</button>
+                <span class="item-info__count">10</span>
+                <button>+</button>
+              </div>
+              <div class="item-info__comp">
+                <div class="item-info__comp-text">Состав</div>
+                <div class="item-info__comp-descr">
+                  Лосось, сыр "Филадельфия", огурец, авокадо
+                </div>
+              </div>
+              <button class="btn">Хочу!</button>
+            </div>
+          </div>
         </section>
       </div>
     </main>
@@ -325,24 +541,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <div class="popup">
-      <div class="popup__wrap">
-        <div class="popup__filter">
-          <div class="popup__filter-text">Сортировка</div>
-          <div class="popup__filter-name">По умолчанию</div>
-        </div>
-        <div class="line"></div>
-        <ul class="popup__list">
-          <li class="popup__list-item">По умолчанию</li>
-          <li class="popup__list-item">Название</li>
-          <li class="popup__list-item">Сначала дешевле</li>
-          <li class="popup__list-item">Сначала дороже</li>
-          <li class="popup__list-item">Количество кусочков</li>
-          <li class="popup__list-item">Вес</li>
-        </ul>
-      </div>
-    </div> -->
 
     <script
       src="https://kit.fontawesome.com/1a7ce0f37b.js"
